force-app/main/default/objects/Purchase_Data__c/Purchase_Data__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - It is the transactional information regarding the booth/product purchased.</description>
    <label>Purchase Data</label>
    <nameField>
        <displayFormat>PD-{000000000}</displayFormat>
        <label>Purchase Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>