force-app/main/default/objects/Purchase_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Account Record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Data</relationshipLabel>
    <relationshipName>Purchase_Data</relationshipName>
    <type>Lookup</type>
</CustomField>