force-app/main/default/objects/Purchase_Data__c/fields/Addition_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Addition_Badge_Count__c</fullName>
    <description>adding new badges by the exhibitor</description>
    <label>Addition Badge Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>