force-app/main/default/objects/Purchase_Data__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Purchase Data</relationshipLabel>
    <relationshipName>Purchase_Data</relationshipName>
    <type>Lookup</type>
</CustomField>