force-app/main/default/objects/Purchase_Data__c/fields/Badge_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Badge_Allocated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>badge allocated for the exhibitor</description>
    <label>Badge Allocated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>