force-app/main/default/objects/Purchase_Data__c/fields/Booth_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Booth_Dimension__c</fullName>
    <label>Booth Dimension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>