force-app/main/default/objects/Purchase_Data__c/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <description>Booth number Purchased by the Exhibitor</description>
    <label>Booth Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>