force-app/main/default/objects/Purchase_Data__c/fields/Booth_Pavillion__c.field-meta.xml
<CustomField>
    <fullName>Booth_Pavillion__c</fullName>
    <label>Booth Pavillion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>