force-app/main/default/objects/Purchase_Data__c/fields/Booth_Show_in_Show__c.field-meta.xml
<CustomField>
    <fullName>Booth_Show_in_Show__c</fullName>
    <label>Booth Show in Show</label>
    <length>100</length>
    <type>Text</type>
</CustomField>