force-app/main/default/objects/Purchase_Data__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Contact Record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Data</relationshipLabel>
    <relationshipName>Purchase_Data</relationshipName>
    <type>Lookup</type>
</CustomField>