force-app/main/default/objects/Purchase_Data__c/fields/Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact Edition mapping</description>
    <label>Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Purchase Data</relationshipLabel>
    <relationshipName>Purchase_Data</relationshipName>
    <type>Lookup</type>
</CustomField>