force-app/main/default/objects/Purchase_Data__c/fields/Contractor_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to capture Contractor mapping respect to Stand Details info</description>
    <label>Contractor Mapping</label>
    <referenceTo>Contractor_Mapping__c</referenceTo>
    <relationshipLabel>Purchase Data</relationshipLabel>
    <relationshipName>Purchase_Data</relationshipName>
    <type>Lookup</type>
</CustomField>