force-app/main/default/objects/Purchase_Data__c/fields/Exhibiting_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibiting_Name__c</fullName>
    <label>Exhibiting Name</label>
    <type>TextArea</type>
</CustomField>