force-app/main/default/objects/Purchase_Data__c/fields/Grand_Parent_Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Purchase_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to Grand Parent Purchase Data in case of Reseller</description>
    <label>Grand Parent Purchase Data</label>
    <referenceTo>Purchase_Data__c</referenceTo>
    <relationshipLabel>Purchase Data (Grand Parent Purchase Data)</relationshipLabel>
    <relationshipName>Purchase_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>