force-app/main/default/objects/Purchase_Data__c/fields/Hall_Name__c.field-meta.xml
<CustomField>
    <fullName>Hall_Name__c</fullName>
    <description>Hall name / title of exhibition center</description>
    <inlineHelpText>Hall name / title of exhibition center</inlineHelpText>
    <label>Booth Hall</label>
    <length>150</length>
    <type>Text</type>
</CustomField>