force-app/main/default/objects/Purchase_Data__c/fields/Open_corners__c.field-meta.xml
<CustomField>
    <fullName>Open_corners__c</fullName>
    <formula>TEXT(Asset__r.Open_corners__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open corners</label>
    <type>Text</type>
</CustomField>