force-app/main/default/objects/Purchase_Data__c/fields/Parent_Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>Parent_Purchase_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will have a lookup to Parent Purchase Data</description>
    <label>Parent Purchase Data</label>
    <referenceTo>Purchase_Data__c</referenceTo>
    <relationshipLabel>Purchase Data</relationshipLabel>
    <relationshipName>Purchase_Data</relationshipName>
    <type>Lookup</type>
</CustomField>