force-app/main/default/objects/Purchase_Data__c/fields/Purchase_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Status__c</fullName>
    <description>Lists the purchase status like Active, Inactive</description>
    <label>Purchase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>