force-app/main/default/objects/Purchase_Data__c/fields/Quantity_Area__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Area__c</fullName>
    <description>Defines the value of quantity/Area for Product/Booth.</description>
    <label>Quantity/Area</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>