force-app/main/default/objects/Purchase_Data__c/fields/Remaining_Badges__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Badges__c</fullName>
    <description>Total_Badges__c - Submitted_Badge__c</description>
    <formula>Total_Badges__c -  Submitted_Badge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>