force-app/main/default/objects/Purchase_Data__c/fields/Share_Co_exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Share_Co_exhibitor__c</fullName>
    <formula>Asset__r.Share_Co_exhibitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share / Co-exhibitor</label>
    <type>Text</type>
</CustomField>