force-app/main/default/objects/Purchase_Data__c/fields/Source_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Transaction_ID__c</fullName>
    <description>Reference to the Record from Source Org</description>
    <label>Source Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>