force-app/main/default/objects/Purchase_Data__c/fields/Stand_Length__c.field-meta.xml
<CustomField>
    <fullName>Stand_Length__c</fullName>
    <label>Stand Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>