force-app/main/default/objects/Purchase_Data__c/fields/Submitted_Badge__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Badge__c</fullName>
    <description>Submitted badge count by Exhibitor as per Badge Data Records Count</description>
    <label>Submitted Badges</label>
    <summaryForeignKey>Badge_Data__c.Purchase_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>