force-app/main/default/objects/Purchase_Data__c/fields/Total_Badges__c.field-meta.xml
<CustomField>
    <fullName>Total_Badges__c</fullName>
    <description>Sum of addition badge count and allocated badge count</description>
    <formula>Addition_Badge_Count__c + Badge_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of addition badge count and allocated badge count</inlineHelpText>
    <label>Total Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>