force-app/main/default/objects/Purchase_Data__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
                <default>true</default>
                <label>Meter</label>
            </value>
            <value>
                <fullName>ft</fullName>
                <label>Feet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>