force-app/main/default/objects/Purchase_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Contact_Edition_Mapping__c</columns>
    <columns>Contact__c</columns>
    <columns>Booth_Product_Type__c</columns>
    <columns>Booth_Number__c</columns>
    <columns>User_Type__c</columns>
    <columns>Purchase_Status__c</columns>
    <columns>Transaction_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Badge_Allocated__c</columns>
    <columns>Quantity_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Purchase_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
</ListView>